@@ -4,6 +4,7 @@ Version 3.0.2
 - Bugfix: #15: Methods from derived classes can be invoked without getting an Interface not found exception
 - Added: Interface Proxies allow to intercept "System.Object" methods (ToString, GetHashCode, Equals) now.
 - Added: AsyncInterceptor as base class for interceptors that support interception of async methods.
+- Added: Intercept<T>() can now be used after OnActivation() Syntax.
 
 Version 3.0.0.0
 ---------------
